# evercrypt-rust

./: .drone.yml  .gitmodules  .travis.yml  Cargo.toml  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  evercrypt-nightly.yml  evercrypt-rs.yml  evercrypt-sys.yml  gh-pages.yml
evercrypt/: all.html  index.html  sidebar-items.js
evercrypt-rs/: Cargo.toml  README.md
evercrypt-rs/benches/: aead.rs  benchmark.rs
evercrypt-rs/fuzz/: Cargo.toml
evercrypt-rs/fuzz/fuzz_targets/: aead.rs  ecdh.rs  ed25519.rs
evercrypt-rs/src/: aead.rs  digest.rs  ecdh.rs  ed25519.rs  hkdf.rs  hmac.rs  lib.rs  openmls_crypto.rs  p256.rs  prelude.rs  rand_util.rs  signature.rs  sqlite_key_store.rs  util.rs  x25519.rs
evercrypt-rs/src/openmls_crypto/: errors.rs  secret.rs
evercrypt-rs/src/sqlite_key_store/: errors.rs  types.rs  util.rs
evercrypt-rs/tests/: slite-key-store.rs  test_aead.rs  test_blake2.rs  test_ed25519.rs  test_hkdf.rs  test_hmac.rs  test_p256.rs  test_p256_ecdh.rs  test_p256_ecdsa.rs  test_sha.rs  test_sha2.rs  test_signatures.rs  test_util.rs  test_x25519.rs
evercrypt-sys/: Cargo.toml  README.md  build-evercrypt.sh  build.rs  build.sh  hacl-build.bat  wrapper.h
evercrypt-sys/src/: aead.rs  evercrypt_bindings.rs  lib.rs  x25519.rs
evercrypt-sys/src/bindings/: bindings.rs
evercrypt/aead/: enum.Error.html  enum.Mode.html  fn.decrypt.html  fn.decrypt_combined.html  fn.decrypt_in_place.html  fn.encrypt.html  fn.encrypt_combined.html  fn.encrypt_in_place.html  fn.key_gen.html  fn.key_size.html  fn.nonce_gen.html  fn.nonce_size.html  fn.tag_size.html  index.html  sidebar-items.js  struct.Aead.html  type.Aad.html  type.Ciphertext.html  type.Key.html  type.Nonce.html  type.Tag.html
evercrypt/digest/: enum.Error.html  enum.Mode.html  fn.blake2b.html  fn.blake2s.html  fn.digest_size.html  fn.get_digest_size.html  fn.hash.html  fn.sha1.html  fn.sha224.html  fn.sha256.html  fn.sha384.html  fn.sha3_224.html  fn.sha3_256.html  fn.sha3_384.html  fn.sha3_512.html  fn.sha512.html  fn.shake128.html  fn.shake256.html  index.html  sidebar-items.js  struct.Digest.html
evercrypt/ecdh/: enum.Error.html  enum.Mode.html  fn.derive.html  fn.derive_base.html  fn.key_gen.html  index.html  sidebar-items.js
evercrypt/ed25519/: enum.Error.html  fn.eddsa_sign.html  fn.eddsa_verify.html  fn.key_gen.html  fn.sk2pk.html  index.html  sidebar-items.js  type.Point.html  type.Scalar.html  type.Signature.html
evercrypt/hkdf/: fn.expand.html  fn.extract.html  fn.hkdf.html  index.html  sidebar-items.js
evercrypt/hmac/: enum.Mode.html  fn.get_tag_size.html  fn.hmac.html  fn.tag_size.html  index.html  sidebar-items.js
evercrypt/p256/: enum.Error.html  fn.dh.html  fn.dh_base.html  fn.ecdsa_sign.html  fn.ecdsa_verify.html  fn.key_gen.html  fn.random_nonce.html  fn.validate_pk.html  fn.validate_sk.html  index.html  sidebar-items.js  struct.Signature.html  type.Nonce.html  type.PublicKey.html  type.Scalar.html
evercrypt/prelude/: index.html
evercrypt/rand_util/: fn.get_random_array.html  fn.get_random_vec.html  fn.random_array.html  fn.random_vec.html  index.html  sidebar-items.js
evercrypt/signature/: enum.Error.html  enum.Mode.html  fn.key_gen.html  fn.sign.html  fn.verify.html  index.html  sidebar-items.js
evercrypt/x25519/: enum.Error.html  fn.dh.html  fn.dh_base.html  fn.key_gen.html  index.html  sidebar-items.js  type.Point.html  type.Scalar.html
evercrypt_sys/: all.html  index.html  sidebar-items.js
evercrypt_sys/evercrypt_bindings/: constant.EverCrypt_Error_AuthenticationFailure.html  constant.EverCrypt_Error_DecodeError.html  constant.EverCrypt_Error_InvalidIVLength.html  constant.EverCrypt_Error_InvalidKey.html  constant.EverCrypt_Error_Success.html  constant.EverCrypt_Error_UnsupportedAlgorithm.html  constant.Spec_Agile_AEAD_AES128_CCM.html  constant.Spec_Agile_AEAD_AES128_CCM8.html  constant.Spec_Agile_AEAD_AES128_GCM.html  constant.Spec_Agile_AEAD_AES256_CCM.html  constant.Spec_Agile_AEAD_AES256_CCM8.html  constant.Spec_Agile_AEAD_AES256_GCM.html  constant.Spec_Agile_AEAD_CHACHA20_POLY1305.html  constant.Spec_Agile_Cipher_AES128.html  constant.Spec_Agile_Cipher_AES256.html  constant.Spec_Agile_Cipher_CHACHA20.html  constant.Spec_Blake2_Blake2B.html  constant.Spec_Blake2_Blake2S.html  constant.Spec_Cipher_Expansion_Hacl_CHACHA20.html  constant.Spec_Cipher_Expansion_Vale_AES128.html  constant.Spec_Cipher_Expansion_Vale_AES256.html  constant.Spec_ECDSA_Hash.html  constant.Spec_ECDSA_NoHash.html  constant.Spec_FFDHE_FFDHE2048.html  constant.Spec_FFDHE_FFDHE3072.html  constant.Spec_FFDHE_FFDHE4096.html  constant.Spec_FFDHE_FFDHE6144.html  constant.Spec_FFDHE_FFDHE8192.html  constant.Spec_Frodo_Params_AES128.html  constant.Spec_Frodo_Params_SHAKE128.html  constant.Spec_Hash_Definitions_Blake2B.html  constant.Spec_Hash_Definitions_Blake2S.html  constant.Spec_Hash_Definitions_MD5.html  constant.Spec_Hash_Definitions_SHA1.html  constant.Spec_Hash_Definitions_SHA2_224.html  constant.Spec_Hash_Definitions_SHA2_256.html  constant.Spec_Hash_Definitions_SHA2_384.html  constant.Spec_Hash_Definitions_SHA2_512.html  fn.EverCrypt_AEAD___proj__Ek__item__ek.html  fn.EverCrypt_AEAD___proj__Ek__item__impl.html  (+169 more)
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/panic/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
src/evercrypt/: aead.rs.html  digest.rs.html  ecdh.rs.html  ed25519.rs.html  hkdf.rs.html  hmac.rs.html  lib.rs.html  p256.rs.html  prelude.rs.html  rand_util.rs.html  signature.rs.html  util.rs.html  x25519.rs.html
src/evercrypt_sys/: evercrypt_bindings.rs.html  lib.rs.html
src/evercrypt_sys/bindings/: bindings.rs.html
(+3 files in other folders)
