[package]
name = "evercrypt"
version = "0.0.8"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
documentation = "https://www.franziskuskiefer.de/evercrypt-rust"
description = "Crypto library using formally verified code from HACL/Evercrypt"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/evercrypt-rust/"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["random"]
# HACL doesn't support AES on all platforms yet.
# We therefore pull in the RustCrypto AES-GCM implementation here as a feature.
rust-crypto-aes = ["aes-gcm"]
force-rust-crypto-aes = ["rust-crypto-aes"]
random = ["rand", "rand_core"]
serialization = ["serde", "serde_json"]

[dependencies]
evercrypt-sys = { version = "0.0.7" }
aes-gcm = { version = "0.8", optional = true }
rand = { version = "0.7", optional = true }
rand_core = { version = "0.5", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
criterion = "^0.3"
rand = "^0.7"

[[bench]]
name = "benchmark"
harness = false
