[package]
name = "evercrypt"
version = "0.0.10"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
documentation = "https://www.franziskuskiefer.de/evercrypt-rust"
description = "Crypto library using formally verified code from HACL/Evercrypt"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/evercrypt-rust/"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["random"]
# HACL doesn't support AES on all platforms yet.
# We therefore pull in the RustCrypto AES-GCM implementation here as a feature.
rust-crypto-aes = ["aes-gcm"]
force-rust-crypto-aes = ["rust-crypto-aes"]
random = ["rand", "rand_core"]
serialization = ["serde", "serde_json", "openmls-crypto/serialization"]
hazmat = []
sqlite-key-store = ["key_store", "rusqlite", "tls_codec", "crypto_algorithms", "zeroize", "openmls-crypto"]

[dependencies]
log = "0.4"
evercrypt-sys = { version = "0.0.9", git = "https://github.com/franziskuskiefer/evercrypt-rust" }
aes-gcm = { version = "0.8", optional = true }
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
# key store
zeroize = { version = "1.3", features = ["zeroize_derive"], optional = true }
key_store = { version = "0.1", git = "https://github.com/franziskuskiefer/key-store-rs", branch = "reorg", optional = true }
rusqlite = { version = "0.25", optional = true }
crypto_algorithms = { version = "0.1", git = "https://github.com/franziskuskiefer/algorithm-identifiers-rs.git", branch = "main", features = ["serialization"], optional = true}
tls_codec = { version = "0.1", git = "https://github.com/openmls/tls-codec.git", branch = "main", features = ["derive", "serde_serialize"], optional = true }
openmls-crypto = { version = "0.1", git = "https://github.com/openmls/crypto.git", branch = "main", optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
criterion = "^0.3"
rand = "0.8"
evercrypt = { path = ".", features = ["hazmat"] }

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "aead"
harness = false
