[package]
name = "evercrypt"
version = "0.1.0-alpha.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://www.franziskuskiefer.de/evercrypt-rust"
description = "Crypto library using formally verified code from HACL/Evercrypt"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/evercrypt-rust/"

[lib]
crate-type = ["staticlib", "cdylib", "lib"]

[features]
default = ["random"]
random = ["rand", "rand_core"]
serialization = ["serde", "serde_json"]

[dependencies]
evercrypt-sys = { version = "0.0.9", path = "../evercrypt-sys" }
rand = { version = "0.8", optional = true }
rand_core = { version = "0.6", optional = true }
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
criterion = "^0.3"
rand = "0.8"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "aead"
harness = false
