[package]
name = "evercrypt-sys"
version = "0.0.3"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
build = "build.rs"
categories = ["cryptography", "api-bindings"]
links = "evercrypt"
license = "MPL-2.0"
documentation = "https://docs.rs/evercrypt-sys"
description = "FFI binding to HACL/Evercrypt"
readme = "README.md"

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
# 0.55 requires at least clang 3.9
bindgen = "0.54"
