[package]
name = "evercrypt-sys"
version = "0.0.5"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
build = "build.rs"
categories = ["cryptography", "api-bindings"]
links = "evercrypt"
license = "MPL-2.0"
documentation = "https://docs.rs/evercrypt-sys"
description = "FFI binding to HACL/Evercrypt"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/evercrypt-rust/"

[dependencies]
libc = { version = "0.2", default-features = false }

[build-dependencies]
# 0.55 requires at least clang 3.9
# This is not needed on Windows!
bindgen = "0.54"
