[package]
name = "evercrypt-sys"
version = "0.0.9"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
build = "build.rs"
categories = ["cryptography", "api-bindings"]
links = "evercrypt"
license = "MPL-2.0"
documentation = "https://www.franziskuskiefer.de/evercrypt-rust"
description = "FFI binding to HACL/Evercrypt"
readme = "README.md"
repository = "https://github.com/franziskuskiefer/evercrypt-rust/"

[dependencies]
libc = { version = "0.2", default-features = false }

[target.'cfg(not(windows))'.build-dependencies]
bindgen = "0.58"
